styles/main.css
/* ... */
/* small index and their content (beneath the job title) */
#job-main dl {
  border-radius: 5px;
  padding: 0.5em 1em 0.5em 1em;
  width: fit-content;
}

/* relating to text - the actual content */
/* the title "Job description" */
#job-main h1 {
  color: black;
  text-align: center;
}
/* job title */
#job-main section h2 {
  font-size: 1.75em;
  color: #6378bb;
}
/* indexes */
#job-main dt,
#job-main h2,
#job-main h3,
#job-main h4 {
  color: #242424;
}
/* big indexes (h3 only) */
#job-main h3 {
  font-size: 1.5em;
}
/* smaller indexes (h4) */
#job-main h4 {
  font-size: 1.25em;
}
/* indexes inside bordered boxes (dt) */
#job-main dt {
  margin: 0.5em 0 0.125em 0;
}
/* content of every indexes */
#job-main p,
#job-main li,
#job-main td,
#job-main dd {
  color: #242424;
}
/* text inside tables */
#job-main td {
  padding: 0.5em 1em 0.5em 1em;
}
/* paragraph indentation */
#job-main p {
  text-indent: 2em;
}
/* in-text citation - linking to the reference section */
#job-main sup {
  font-size: 0.5em;
  font-weight: bold;
}

/* the horizontal rule aka the thematic break (hr) */
#job-main hr {
  border-bottom: 0.5px solid #242424;
  width: 80%;
  margin: 2em 0em 0em 0em;
}

/* links */
#job-main a:link {
  color: rgb(100, 125, 126);
  text-decoration: none;
}

#job-main a:visited {
  color: #6378bb;
  text-decoration: none;
}
#job-main a:hover {
  color: #9bc7f4;
  text-decoration: underline;
}
#job-main a:active {
  color: rgb(51, 51, 51);
  text-decoration: underline;
}

/**************************** End of job.css ***********************/

/**************************** Start of apply.css ***********************/

/* Styles form inputs for better appearance
Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.asp
*/
.apply-class * {
  margin: 0;
  padding: 0;
}
.apply-input[type="text"],
.apply-input[type="tel"],
.apply-input[type="email"],
.apply-input[type="date"],
.apply-textarea,
.apply-select {
  width: 100%;
  padding: 12px;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
}

.apply-h1 {
  font-size: 5vw;
  text-align: center;
  margin: 0;
}

.apply-h2 {
  text-align: center;
  font-weight: normal;
}

/* Adds spacing between inputs in a table */
.apply-td {
  padding-right: 10px;
}

/* Adds spacing between form elements */
.apply-input,
.apply-textarea,
.apply-select {
  margin: 10px 0 0 0;
  display: inline-block;
}

/* Adds spacing between form labels */
.apply-label {
  margin: 20px 0 0 0;
  display: inline-block;
}

/* Adds spacing and borders on fieldsets to easier distinguish between sections */
.apply-section .apply-gender-list {
  margin: 20px 0 0 0;
  border-radius: 5px;
  border: 1px solid #ccc;
}

/* Removes margin from the 'gender_list' ID fieldset */
.apply-gender-list > label {
  margin: 0;
}

/* Styles the submit button on forms
  Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.asp
  */
.apply-input[type="submit"] {
  width: 30%;
  background-color: #5d79c0;
  color: white;
  padding: 15px 20px;
  border: none;
  border-radius: 7px;
  font-size: 105%;
  margin-bottom: 100px;
}

/* Reduces the width of the main content on pages and centers it */
.apply-container {
  width: 60%;
  margin: auto;
  margin-top: 85px;
}

/* Extends width of the table to take up all space allowed */
.apply-table {
  width: 100%;
}

/* Adapted from https://form.taxi/en/sample-forms/job-application-form */
.apply-section {
  font-size: 100%;
  margin-top: 10px;
  margin-bottom: 1.5rem;
  border: 0;
  padding: 0;
}

/* Adapted from https://form.taxi/en/sample-forms/job-application-form */
.apply-section > legend {
  font-weight: 700;
  font-size: 130%;
  padding: 0;
  padding-top: 15px;
}

/**************************** End of apply.css ***********************/

/**************************** Start of Header and Footer ***********************/
/* Header navigation */
#header-nav {
  width: 100%;
  height: 75px;
  line-height: 75px; /* height between words in nav */
  padding: 0px, 100px;
  position: static;
  background: #d9ecfd; /* header color backup #EDF1FF #ccd5f8; footer color backup 00093c 2d0b00 */
  background: linear-gradient(to right, #78828a, #283b4e, #451100);
  text-align: center;
}

/* logo on the left */
#header-nav .logo {
  width: 80px;
  height: auto;
  font-weight: bold;
  float: left;
  color: #333;
  text-transform: uppercase;
  letter-spacing: 1px;
  cursor: pointer; /* show cursor not the mouse */
  justify-content: center;
}

#header-nav ul {
  justify-content: center;
  /* float: left; */
  margin-top: 0px;
}
/* display horizontally the nav */
/* display horizontally the nav */
#header-nav li {
  display: inline-block;
  list-style: none;
  /* not showing dot of ul ol */
}

#header-nav li a {
  font-size: 18px;
  text-transform: uppercase;
  padding: 30px 114px;
  color: white;
  text-decoration: none;
}
/*decoration more transition of header */
#header-nav li a:hover {
  background-color: white;
  color: #ff8c69;
  transition: 0.8s ease-out;
  /* for the footer */
}
#general-footer {
  width: 100%;
  /* position: absolute; */
  bottom: 0;
  /* color change left to right of linear-gradient */
  background: linear-gradient(to right, #78828a, #283b4e, #451100);
  color: #fff;
  padding: 20px 0 10px;
  border-top-left-radius: 120px;
  font-size: 13px;
  line-height: 12px;
}
.footer-row {
  width: 95%; /* gap between each row including 3 rows*/
  margin: auto;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: space-between;
}
/* divide the column equally */
.footer-col {
  flex-basis: 25%;
  padding: 10px;
}
/*team logo */
.logo {
  width: 120px;
  margin-bottom: 30px;
}

/* col 2 email phone */
.footer-col h3 {
  width: fit-content;
  margin-bottom: 40px;
  position: relative;
}
.footer-email-id {
  width: fit-content;
  border-bottom: 1px solid #333;
  margin: 20px 0;
}

.footer-col ul li {
  list-style: none;
  margin-bottom: 12px;
}
/* ... */

